--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   <link rel="icon" type="image/x-icon" href="assets/img/favicon.png">
 </head>
 
-<body>
+<body class="extensionSize">
   <app-root></app-root>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
